# sea-orm-demo

./: .env  Cargo.toml  README.md  application-dev.yaml  application-nacos.yaml  cloc.sh  gen.sh  generate_entity.sh
api/: Cargo.toml  README.md
api/src/: lib.rs  patient_controller.rs
common/: Cargo.toml
common/src/: lib.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
entity/: Cargo.toml
entity/src/: lib.rs  patient.rs  prelude.rs  trauma_patient.rs
repository/: Cargo.toml
repository/src/: lib.rs  patient_repository.rs
repository/src/mysql/: mod.rs  patient_repository_impl.rs  prelude.rs
src/: config.rs  dateutil.rs  main.rs
src/entity/: activity.rs  deposit.rs  game.rs  ip_whitelist.rs  mod.rs  notification.rs  order.rs  player.rs  player_bank_account.rs  prelude.rs  rbac_resources.rs  roles.rs  settings.rs  transaction.rs  trauma_patient.rs  withdraw.rs
