[package]
name = "repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
derive-new = "0.5.9"
entity = { path = "../entity" }
sea-orm = { workspace = true }
async-trait = "0.1.60"